# dotfiles

./: .gitignore  .profile  .xinitrc  .zsh_favlist  .zshrc  change-all-themes.sh  clampstdout.cpp  install_home_symlinks.sh  readme.md  spicetify-theme.md  theme-manager.sh
.config/alacritty/: alacritty  alacritty-dark.yml  alacritty-light.yml  alacritty.yml  change-theme.sh
.config/cmus/: autosave  cache  cmus  command-history  lib.pl
.config/fontconfig/: fonts.conf
.config/gtk-3.0/: bookmarks  change-theme.sh  gtk-3.0
.config/mako/: change-theme.sh  config  config-dark  config-light
.config/rofi/: config.rasi  rofi
.config/spicetify/: change-theme.sh  config-xpui.ini  config.ini  spicetify
.config/spicetify/Themes/Dribbblish/: assets  color.ini  user.css
.config/sway/: change-theme.sh  config  config.base  config.footer-dark  config.footer-light  config.header-dark  config.header-light  config.save  create-config.sh  start-wob.sh  sway  swaylock.sh
.config/wallpaper/: change-theme.sh
.config/waybar/: change-theme.sh  checkupdates.sh  config  style-dark.css  style-light.css  style.css  waybar
.config/wlogout/: change-theme.sh  layout  style-dark.css  style.css  wlogout
get_focused_node/: CMakeLists.txt  getFocusedNode  json.json  main.cpp
theme_generators/: .metadata  README.md  pubspec.yaml
theme_generators/android/app/: build.gradle
theme_generators/android/app/src/debug/: AndroidManifest.xml
theme_generators/android/app/src/main/: AndroidManifest.xml
theme_generators/ios/Runner/: Info.plist
theme_generators/ios/Runner.xcodeproj/: project.pbxproj
theme_generators/linux/: CMakeLists.txt  my_application.cc
theme_generators/test/: widget_test.dart
theme_generators/web/: index.html  manifest.json
theme_manager/: pubspec.yaml
(+1 files in other folders)
